# shelf

./: .gitignore  README.org
.github/workflows/: node.yaml  rust.yml
growler/: Cargo.toml
growler/src/: constants.rs  handler.rs  lib.rs  request.rs  router.rs  server.rs  testing.rs
growler/src/response/: json.rs  mod.rs
scripts/: import_covers.py  import_mal_covers.py  requirements.txt
shelf/: Cargo.toml
shelf-server/: Cargo.toml
shelf-server/src/: handlers.rs  main.rs  model.rs  routes.rs
shelf-server/static/: index.html  package.json
shelf-server/static/src/: App.vue  EditItem.vue  Items.vue  main.js  prefixtrie.mjs  prefixtrie.test.mjs  util.js
shelf-server/static/src/imports/: index.js  malbackup.js  malurl.js  mangadex.js
shelf-server/static/src/views/: EditAlternative.vue  EditPeople.vue  EditSeries.vue  EditTags.vue
shelf-server/static/v2/: .prettierignore  package.json  rollup.config.js
shelf-server/static/v2/public/: global.css  index.html
shelf-server/static/v2/src/: App.svelte  EditItem.svelte  Shelf.svelte  item-edit.mjs  item-edit.test.mjs  prefixtrie.test.mjs  util.js
shelf-server/static/v2/src/component/: EditAlternatives.svelte  EditPeople.svelte  EditSeries.svelte  EditableLabel.svelte  NullableMultiDate.svelte  TagList.svelte  TitleBar.svelte  Toast.svelte  toast.js
shelf-server/static/v2/src/import/: cubari.mjs  cubari.test.mjs  dynastyscans.mjs  dynastyscans.test.mjs  kitsu.mjs  kitsu.test.mjs  kobo.mjs  kobo.test.mjs  mangadex.mjs  mangadex.test.mjs  nitter.mjs  nitter.test.mjs  sundaywebry.mjs  sundaywebry.test.mjs  test-util.mjs  test.at-the-end-of-4-minutes.html  test.beginning-their-new-life-together.html  test.can-a-guy-like-me-be-a-maid.html  test.dating-with-a-tail.html  test.dora-yome.cover.json  test.dora-yome.json  test.hanasaku-iroha-home-sweet-home.json  test.jitsu-wa-watashi-wa.json  test.kobayashi-san-chi-no-maid-dragon-ova.json  test.magical-lollipop.html  test.march-comes-in-like-a-lion.html  test.orsinian-tales.html  test.rikeikoi.json  test.tamen-de-gushi.json  test.tokyo-marble-chocolate.json  test.vladlove.json  test.zanka.html  test.キミの手には.html  test.ハイカロリーアパート.html  util.mjs  util.test.mjs  webtoons.mjs  webtoons.test.mjs
shelf-server/static/v2/src/stores/: filters.js  item-map.js  items.js  people.js  series.js  tags.js
shelf-web/: Cargo.toml
shelf-web/src/: main.rs
shelf-web/static/: main.css
shelf-web/templates/: base.html  bookshelf.md  home.html  in-progress.html  item.html
shelf/src/: common.rs  item.rs  lib.rs  save.rs  series.rs  shelf.rs
