[package]
name = "growler"
version = "0.1.0"
authors = ["David Li <li.davidm96@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
http = "0.2"
hyper = "0.13"
regex = { version = "1", features = ["std", "perf"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "signal"] }
