[package]
name = "shelf-server"
version = "0.1.0"
authors = ["David Li <li.davidm96@gmail.com>"]

[dependencies]
actix = "~0.5"
actix-web = { version = "~0.6", features = ["tls"] }
app_dirs = "1.2"
clap = "2.31"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"

[dependencies.shelf]
path = "../shelf"