[package]
name = "shelf-server"
edition = "2018"
version = "0.2.0"
authors = ["David Li <li.davidm96@gmail.com>"]
license = "Apache-2.0"

[dependencies]
app_dirs = "1.2"
bytes = "0.5"
cookie = "0.14"
futures = "0.3"
hyper = "0.14"
log = "0.4"
percent-encoding = "2.1"
pretty_env_logger = "0.3"
reqwest = { version = "0.10" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
tokio = { version = "0.2", features = ["macros", "signal"] }
warp = "0.2"

[dependencies.shelf]
path = "../shelf"

[dev-dependencies]
tempfile = "3"