# Copyright 2020 David Li <li.davidm96@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
#     Unless required by applicable law or agreed to in writing, software
#     distributed under the License is distributed on an "AS IS" BASIS,
#     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#     See the License for the specific language governing permissions and
#     limitations under the License.

[package]
name = "shelf-web"
version = "0.1.0"
authors = ["David Li <li.davidm96@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
app_dirs = "1.2"
clap = "2.33"
tera = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
warp = "0.1.19"

[dependencies.shelf]
path = "../shelf"
