[package]
name = "shelf"
edition = "2018"
version = "0.1.0"
authors = ["David Li <li.davidm96@gmail.com>"]
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.16"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
serde_test = "1.0"
tempfile = "3.1"
